# pingo_sdl

./: CMakeLists.txt  baseSDL.c  baseSDL.h  main.c
pingo/: CMakeLists.txt  backend.c
pingo/render/: pixel.c  pixel.h  renderer.c
